--- a/NavigationCookbook/NavigationCookbook.xcodeproj/xcshareddata/xcschemes/NavigationCookbook.xcscheme
+++ b/NavigationCookbook/NavigationCookbook.xcodeproj/xcshareddata/xcschemes/NavigationCookbook.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1540"
+   LastUpgradeVersion = "1510"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "B334FB852C15C32E0000B632"
+               BuildableName = "NavigationCookbookTests.xctest"
+               BlueprintName = "NavigationCookbookTests"
+               ReferencedContainer = "container:NavigationCookbook.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
